add images and design

--- a/index.html
+++ b/index.html
@@ -61,5 +61,241 @@
       </ul>
       <button>subscribe</button>
     </div>
+
+    <main>
+      <div class="first">
+        <div class="left">
+          <div class="common-dim-bg">
+            <p class="color-text" style="background: #ff2a0d">NORWAY</p>
+            <div style="display: flex; justify-content: space-between">
+              <img
+                class="lf-icon"
+                src="./public/images/left-arrow.svg"
+                alt=""
+              />
+              <img
+                class="lf-icon"
+                src="./public/images/right-arrow.svg"
+                alt=""
+              />
+            </div>
+            <div>
+              <div style="display: flex; gap: 5px">
+                <div class="icon-text">
+                  <img class="icon" src="./public/images/group.svg" alt="" />
+                  <p>Sarfraz Jasim</p>
+                </div>
+                <p>|</p>
+                <div class="icon-text">
+                  <img class="icon" src="./public/images/calender.svg" alt="" />
+                  <p>July 17, 2023</p>
+                </div>
+              </div>
+              <p class="first-bg-text" style="font-size: 2.375rem">
+                Everything You Need To Know <br />
+                To See The Northern Light In Norway
+              </p>
+            </div>
+          </div>
+        </div>
+        <div
+          class="right"
+          style="display: flex; flex-direction: column; gap: 4px"
+        >
+          <div class="common-dim-bg">
+            <div style="padding-left: 1.5rem">
+              <p class="color-text" style="background: #047ffa">NORWAY</p>
+              <div>
+                <div class="icon-text">
+                  <img class="icon" src="./public/images/calender.svg" alt="" />
+                  <p>July 17, 2023</p>
+                </div>
+                <p
+                  class="first-bg-text"
+                  style="font-size: 1.25rem; line-height: 1.875rem"
+                >
+                  Everything You Need To Know <br />
+                  To See The Northern Light In Norway
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="common-dim-bg">
+            <div style="padding-left: 1.5rem">
+              <p class="color-text" style="background: #ce0cff">NORWAY</p>
+              <div>
+                <div class="icon-text">
+                  <img class="icon" src="./public/images/calender.svg" alt="" />
+                  <p>July 17, 2023</p>
+                </div>
+                <p
+                  class="first-bg-text"
+                  style="font-size: 1.25rem; line-height: 1.875rem"
+                >
+                  Everything You Need To Know <br />
+                  To See The Northern Light In Norway
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="second">
+        <p>Where Do You Want To Go?</p>
+        <div>
+          <div>
+            <div class="common-dim-bg second-inner-div">
+              <p class="second-bg-text">New York</p>
+              <p class="second-nm-text">What an amazing view!</p>
+            </div>
+          </div>
+          <div>
+            <div class="common-dim-bg second-inner-div">
+              <p class="second-bg-text">Africa</p>
+              <p class="second-nm-text">Land of mystery and music!</p>
+            </div>
+          </div>
+          <div>
+            <div class="common-dim-bg second-inner-div">
+              <p class="second-bg-text">EUROPE</p>
+              <p class="second-nm-text">Visit foe amazing history!</p>
+            </div>
+          </div>
+          <div>
+            <div class="common-dim-bg second-inner-div">
+              <p class="second-bg-text">AISA</p>
+              <p class="second-nm-text">Visit for honeymoon!</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="third">
+        <p>Top DESTINATION</p>
+        <div>
+          <div>
+            <div class="img-place1" style="padding: 1rem">
+              <p class="color-text" style="background: #047ffa">NORWAY</p>
+            </div>
+            <div style="display: flex; flex-direction: column; gap: 5px">
+              <div
+                style="
+                  display: flex;
+                  align-items: center;
+                  gap: 5px;
+                  margin-top: 10px;
+                "
+              >
+                <img
+                  class="icon"
+                  src="./public/images/calender-trans.svg"
+                  alt=""
+                />
+                <p class="icon-text">July 17, 2023</p>
+              </div>
+              <p class="third-ng-text">
+                Everything You Need To Know <br />
+                To See The Northern Light
+              </p>
+              <div class="read-more">
+                <p>Read More</p>
+                <img src="./public/images/right-arrow-sm.svg" alt="" />
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="img-place2" style="padding: 1rem">
+              <p class="color-text" style="background: #ce0cff">NORWAY</p>
+            </div>
+            <div style="display: flex; flex-direction: column; gap: 5px">
+              <div
+                style="
+                  display: flex;
+                  align-items: center;
+                  gap: 5px;
+                  margin-top: 10px;
+                "
+              >
+                <img
+                  class="icon"
+                  src="./public/images/calender-trans.svg"
+                  alt=""
+                />
+                <p class="icon-text">July 17, 2023</p>
+              </div>
+              <p class="third-ng-text">
+                Everything You Need To Know <br />
+                To See The Northern Light
+              </p>
+              <div class="read-more">
+                <p>Read More</p>
+                <img src="./public/images/right-arrow-sm.svg" alt="" />
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="img-place3" style="padding: 1rem">
+              <p class="color-text" style="background: #ff2a0d">NORWAY</p>
+            </div>
+            <div style="display: flex; flex-direction: column; gap: 5px">
+              <div
+                style="
+                  display: flex;
+                  align-items: center;
+                  gap: 5px;
+                  margin-top: 10px;
+                "
+              >
+                <img
+                  class="icon"
+                  src="./public/images/calender-trans.svg"
+                  alt=""
+                />
+                <p class="icon-text">July 17, 2023</p>
+              </div>
+              <p class="third-ng-text">
+                Everything You Need To Know <br />
+                To See The Northern Light
+              </p>
+              <div class="read-more">
+                <p>Read More</p>
+                <img src="./public/images/right-arrow-sm.svg" alt="" />
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="img-place4" style="padding: 1rem">
+              <p class="color-text" style="background: #ce0cff">NORWAY</p>
+            </div>
+            <div style="display: flex; flex-direction: column; gap: 5px">
+              <div
+                style="
+                  display: flex;
+                  align-items: center;
+                  gap: 5px;
+                  margin-top: 10px;
+                "
+              >
+                <img
+                  class="icon"
+                  src="./public/images/calender-trans.svg"
+                  alt=""
+                />
+                <p class="icon-text">July 17, 2023</p>
+              </div>
+              <p class="third-ng-text">
+                Everything You Need To Know <br />
+                To See The Northern Light
+              </p>
+              <div class="read-more">
+                <p>Read More</p>
+                <img src="./public/images/right-arrow-sm.svg" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
