add more design

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       </div>
 
       <div class="second">
-        <p>Where Do You Want To Go?</p>
+        <p class="title-text">Where Do You Want To Go?</p>
         <div>
           <div>
             <div class="common-dim-bg second-inner-div">
@@ -172,7 +172,7 @@
       </div>
 
       <div class="third">
-        <p>Top DESTINATION</p>
+        <p class="title-text">Top DESTINATION</p>
         <div>
           <div>
             <div class="img-place1" style="padding: 1rem">
@@ -295,6 +295,23 @@
             </div>
           </div>
         </div>
+      </div>
+
+      <div class="fourth">
+        <p>
+          Gutenberg <br />
+          Post Blocks
+        </p>
+        <div>
+          <img src="./public/images/block1.svg" alt="" />
+          <img src="./public/images/block2.svg" alt="" />
+          <img src="./public/images/block1.svg" alt="" />
+        </div>
+        <button>DOWNLOAD NOW</button>
+      </div>
+
+      <div class="fifth">
+        <p class="title-text">Discover Most Amazing PLACES</p>
       </div>
     </main>
   </body>
