add more design

--- a/index.html
+++ b/index.html
@@ -310,9 +310,471 @@
         <button>DOWNLOAD NOW</button>
       </div>
 
-      <!-- <div class="fifth">
-        <p class="title-text">Discover Most Amazing PLACES</p>
-      </div> -->
+      <div class="fifth-background">
+        <p class="title-text-2 title-text">Discover Most Amazing PLACES</p>
+        <div class="fifth" style="display: flex">
+          <div>
+            <div>
+              <img
+                class="fifth-img"
+                src="./public/images/background.png"
+                alt=""
+              />
+              <div class="fifth-img-details">
+                <img class="img1" src="./public/images/group.svg" alt="" />
+                <p>Sarfraz Jasim</p>
+                <div></div>
+                <img class="img1" src="./public/images/calender.svg" alt="" />
+                <p>July 17, 2023</p>
+              </div>
+              <p class="fifth-title">
+                Everything You Need To Know To See The Northern Lights
+              </p>
+              <p class="fifth-description">
+                Hidden Hills property with mountain and city view boast nine bed
+                rooms including a master suite with private terrace and anny...
+              </p>
+              <button class="fifth-button">
+                Read More
+                <span
+                  ><img
+                    class="fifth-button-arrow"
+                    src="./public/images/arrow.svg"
+                    alt=""
+                /></span>
+              </button>
+            </div>
+            <div></div>
+          </div>
+          <div class="fifth-second-section-main">
+            <div class="fifth-second-section">
+              <div>
+                <img class="img2" src="./public/images/norway1.png" alt="" />
+                <div></div>
+              </div>
+              <div class="fifth-second-section-width">
+                <div class="fifth-second-section-time">
+                  <img class="img1" src="./public/images/calender.svg" alt="" />
+                  <p>July 17, 2023</p>
+                </div>
+                <p class="fifth-second-section-title">
+                  Everything You Need To Know To See The Northern LightS
+                </p>
+                <p class="fifth-second-section-description">
+                  Hidden Hills property with mountain and city view boast nine
+                  bed
+                </p>
+                <button class="fifth-button">
+                  Read More
+                  <span
+                    ><img
+                      class="fifth-button-arrow"
+                      src="./public/images/arrow.svg"
+                      alt=""
+                  /></span>
+                </button>
+              </div>
+            </div>
+
+            <div class="fifth-second-section">
+              <div>
+                <img class="img2" src="./public/images/norway2.png" alt="" />
+                <div></div>
+              </div>
+              <div class="fifth-second-section-width">
+                <div class="fifth-second-section-time">
+                  <img class="img1" src="./public/images/calender.svg" alt="" />
+                  <p>July 17, 2023</p>
+                </div>
+                <p class="fifth-second-section-title">
+                  Everything You Need To Know To See The Northern LightS
+                </p>
+                <p class="fifth-second-section-description">
+                  Hidden Hills property with mountain and city view boast nine
+                  bed
+                </p>
+                <button class="fifth-button">
+                  Read More
+                  <span
+                    ><img
+                      class="fifth-button-arrow"
+                      src="./public/images/arrow.svg"
+                      alt=""
+                  /></span>
+                </button>
+              </div>
+            </div>
+
+            <div class="fifth-second-section">
+              <div>
+                <img class="img2" src="./public/images/norway3.png" alt="" />
+                <div></div>
+              </div>
+              <div class="fifth-second-section-width">
+                <div class="fifth-second-section-time">
+                  <img class="img1" src="./public/images/calender.svg" alt="" />
+                  <p>July 17, 2023</p>
+                </div>
+                <p class="fifth-second-section-title">
+                  Everything You Need To Know To See The Northern LightS
+                </p>
+                <p class="fifth-second-section-description">
+                  Hidden Hills property with mountain and city view boast nine
+                  bed
+                </p>
+                <button class="fifth-button">
+                  Read More
+                  <span
+                    ><img
+                      class="fifth-button-arrow"
+                      src="./public/images/arrow.svg"
+                      alt=""
+                  /></span>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="sixth">
+        <div>
+          <div>
+            <p class="sixth-text1">LATEST FROM MY JOURNAL</p>
+            <img class="sixth-img1" src="./public/images/sixth1.png" alt="" />
+            <div class="fifth-img-details">
+              <img class="img1" src="./public/images/group.svg" alt="" />
+              <p>Sarfraz Jasim</p>
+              <div></div>
+              <img class="img1" src="./public/images/calender.svg" alt="" />
+              <p>July 17, 2023</p>
+            </div>
+            <p class="fifth-title sixth-w-change" id="sixth-title">
+              Everything You Need To Know To See The Northern Lights In Nosey
+              Sky
+            </p>
+            <p class="fifth-description sixth-w-change">
+              Hidden Hills property with mountain and city view boast nine bed
+              rooms including a master suite with private terrace and anny Hills
+              property with mountain.
+            </p>
+            <button class="fifth-button">
+              Read More
+              <span
+                ><img
+                  class="fifth-button-arrow"
+                  src="./public/images/arrow.svg"
+                  alt=""
+              /></span>
+            </button>
+            <div class="sixth-border"></div>
+          </div>
+
+          <div>
+            <div class="sixth-flex1">
+              <div>
+                <img
+                  class="sixth-img2"
+                  src="./public/images/sixth2.png"
+                  alt=""
+                />
+                <div class="fifth-img-details">
+                  <img class="img1" src="./public/images/calender.svg" alt="" />
+                  <p>July 17, 2023</p>
+                </div>
+                <p class="fifth-title sixth-w-change2" id="sixth-title2">
+                  Everything You Need To Know To See The Northern Lights In
+                  Nosey Sky
+                </p>
+                <p class="fifth-description sixth-w-change2">
+                  Hidden Hills property with mountain and city view boast nine
+                  bed rooms including
+                </p>
+                <button class="fifth-button">
+                  Read More
+                  <span
+                    ><img
+                      class="fifth-button-arrow"
+                      src="./public/images/arrow.svg"
+                      alt=""
+                  /></span>
+                </button>
+              </div>
+              <div>
+                <img
+                  class="sixth-img2"
+                  src="./public/images/sixth3.png"
+                  alt=""
+                />
+                <div class="fifth-img-details">
+                  <img class="img1" src="./public/images/calender.svg" alt="" />
+                  <p>July 17, 2023</p>
+                </div>
+                <p class="fifth-title sixth-w-change2" id="sixth-title2">
+                  Everything You Need To Know To See The Northern Lights In
+                  Nosey Sky
+                </p>
+                <p class="fifth-description sixth-w-change2">
+                  Hidden Hills property with mountain and city view boast nine
+                  bed rooms including
+                </p>
+                <button class="fifth-button">
+                  Read More
+                  <span
+                    ><img
+                      class="fifth-button-arrow"
+                      src="./public/images/arrow.svg"
+                      alt=""
+                  /></span>
+                </button>
+              </div>
+            </div>
+            <div class="sixth-flex1">
+              <div>
+                <img
+                  class="sixth-img2"
+                  src="./public/images/sixth4.png"
+                  alt=""
+                />
+                <div class="fifth-img-details">
+                  <img class="img1" src="./public/images/calender.svg" alt="" />
+                  <p>July 17, 2023</p>
+                </div>
+                <p class="fifth-title sixth-w-change2" id="sixth-title2">
+                  Everything You Need To Know To See The Northern Lights In
+                  Nosey Sky
+                </p>
+                <p class="fifth-description sixth-w-change2">
+                  Hidden Hills property with mountain and city view boast nine
+                  bed rooms including
+                </p>
+                <button class="fifth-button">
+                  Read More
+                  <span
+                    ><img
+                      class="fifth-button-arrow"
+                      src="./public/images/arrow.svg"
+                      alt=""
+                  /></span>
+                </button>
+              </div>
+              <div>
+                <img
+                  class="sixth-img2"
+                  src="./public/images/sixth5.png"
+                  alt=""
+                />
+                <div class="fifth-img-details">
+                  <img class="img1" src="./public/images/calender.svg" alt="" />
+                  <p>July 17, 2023</p>
+                </div>
+                <p class="fifth-title sixth-w-change2" id="sixth-title2">
+                  Everything You Need To Know To See The Northern Lights In
+                  Nosey Sky
+                </p>
+                <p class="fifth-description sixth-w-change2">
+                  Hidden Hills property with mountain and city view boast nine
+                  bed rooms including
+                </p>
+                <button class="fifth-button">
+                  Read More
+                  <span
+                    ><img
+                      class="fifth-button-arrow"
+                      src="./public/images/arrow.svg"
+                      alt=""
+                  /></span>
+                </button>
+              </div>
+            </div>
+
+            <div class="sixth-flex2">
+              <button class="sixth-btn">Previous</button>
+              <button class="sixth-btn">1</button>
+              <button class="sixth-btn2">2</button>
+              <button class="sixth-btn">3</button>
+              <button class="sixth-btn">4</button>
+              <button class="sixth-btn">5</button>
+              <button class="sixth-btn">Next</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="sixth-second">
+          <p class="sixth-text2">POPULAR POST</p>
+          <img class="sixth-img3" src="./public/images/sixth6.png" alt="" />
+          <div class="fifth-img-details">
+            <img class="img1" src="./public/images/calender.svg" alt="" />
+            <p>July 17, 2023</p>
+          </div>
+          <p class="fifth-title sixth-w-change3" id="sixth-title3">
+            Everything You Need To Know To See The Northern Lights In Nosey Sky
+          </p>
+          <p class="fifth-description sixth-w-change3">
+            Hidden Hills property with mountain and city view boast nine bed
+            rooms including
+          </p>
+          <div class="sixth-border" id="sixth-border2"></div>
+
+          <div class="sixth-flex3">
+            <img class="sixth-img4" src="./public/images/sixth7.png" alt="" />
+            <div>
+              <div class="fifth-img-details">
+                <img class="img1" src="./public/images/calender.svg" alt="" />
+                <p>July 17, 2023</p>
+              </div>
+              <p class="fifth-title sixth-w-change4" id="sixth-title3">
+                Everything You Need To Know To See The Northern Lights In Nosey
+                Sky
+              </p>
+            </div>
+          </div>
+
+          <div class="sixth-flex3">
+            <img class="sixth-img4" src="./public/images/sixth8.png" alt="" />
+            <div>
+              <div class="fifth-img-details">
+                <img class="img1" src="./public/images/calender.svg" alt="" />
+                <p>July 17, 2023</p>
+              </div>
+              <p class="fifth-title sixth-w-change4" id="sixth-title3">
+                Everything You Need To Know To See The Northern Lights In Nosey
+                Sky
+              </p>
+            </div>
+          </div>
+
+          <div class="sixth-flex3">
+            <img class="sixth-img4" src="./public/images/sixth9.png" alt="" />
+            <div>
+              <div class="fifth-img-details">
+                <img class="img1" src="./public/images/calender.svg" alt="" />
+                <p>July 17, 2023</p>
+              </div>
+              <p class="fifth-title sixth-w-change4" id="sixth-title3">
+                Everything You Need To Know To See The Northern Lights In Nosey
+                Sky
+              </p>
+            </div>
+          </div>
+
+          <div class="sixth-flex3">
+            <img class="sixth-img4" src="./public/images/sixth10.png" alt="" />
+            <div>
+              <div class="fifth-img-details">
+                <img class="img1" src="./public/images/calender.svg" alt="" />
+                <p>July 17, 2023</p>
+              </div>
+              <p class="fifth-title sixth-w-change4" id="sixth-title3">
+                Everything You Need To Know To See The Northern Lights In Nosey
+                Sky
+              </p>
+            </div>
+          </div>
+
+          <div class="sixth-flex3">
+            <img class="sixth-img4" src="./public/images/sixth11.png" alt="" />
+            <div>
+              <div class="fifth-img-details">
+                <img class="img1" src="./public/images/calender.svg" alt="" />
+                <p>July 17, 2023</p>
+              </div>
+              <p class="fifth-title sixth-w-change4" id="sixth-title3">
+                Everything You Need To Know To See The Northern Lights In Nosey
+                Sky
+              </p>
+            </div>
+          </div>
+
+          <div class="sixth-div1">
+            <p class="sixth-text3">Post Blocks</p>
+            <h5 class="sixth-text4">
+              Best gutenberg blocks ever for news, magagine block
+            </h5>
+            <button class="sixth-btn3">DOWNLOAD NOW</button>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="sixth-div2-svg1"
+              width="207"
+              height="129"
+              viewBox="0 0 207 129"
+              fill="none"
+            >
+              <path
+                d="M129.59 0.466309L0.737671 129.318H153.815L206.129 77.0052L129.59 0.466309Z"
+                fill="url(#paint0_linear_1_340)"
+              />
+              <defs>
+                <linearGradient
+                  id="paint0_linear_1_340"
+                  x1="103.433"
+                  y1="0.466309"
+                  x2="103.433"
+                  y2="129.318"
+                  gradientUnits="userSpaceOnUse"
+                >
+                  <stop stop-color="#575EF7" />
+                  <stop offset="1" stop-color="#0D99FF" stop-opacity="0.7" />
+                </linearGradient>
+              </defs>
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="sixth-div2-svg2"
+              width="206"
+              height="129"
+              viewBox="0 0 206 129"
+              fill="none"
+            >
+              <path
+                d="M129.289 0.466309L0.436798 129.318H153.515L205.828 77.0052L129.289 0.466309Z"
+                fill="white"
+              />
+            </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="sixth-div2-svg3"
+              width="206"
+              height="129"
+              viewBox="0 0 206 129"
+              fill="none"
+            >
+              <path
+                d="M129.349 0.466309L0.497055 129.318H153.575L205.888 77.0052L129.349 0.466309Z"
+                fill="url(#paint0_linear_1_342)"
+              />
+              <defs>
+                <linearGradient
+                  id="paint0_linear_1_342"
+                  x1="103.193"
+                  y1="0.466309"
+                  x2="103.193"
+                  y2="129.318"
+                  gradientUnits="userSpaceOnUse"
+                >
+                  <stop stop-color="#575EF7" />
+                  <stop offset="1" stop-color="#0D99FF" stop-opacity="0.7" />
+                </linearGradient>
+              </defs>
+            </svg>
+          </div>
+
+          <div>
+            <p class="sixth-text5">galary</p>
+            <div class="sixth-flex4">
+              <img class="sixth-img5" src="./public/images/sn1.png" alt="" />
+              <img class="sixth-img5" src="./public/images/sn2.png" alt="" />
+              <img class="sixth-img5" src="./public/images/sn3.png" alt="" />
+              <img class="sixth-img5" src="./public/images/sn4.png" alt="" />
+              <img class="sixth-img5" src="./public/images/sn5.png" alt="" />
+              <img class="sixth-img5" src="./public/images/sn6.png" alt="" />
+              <img class="sixth-img5" src="./public/images/sn7.png" alt="" />
+              <img class="sixth-img5" src="./public/images/sn8.png" alt="" />
+              <img class="sixth-img5" src="./public/images/sn9.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="container1">
