fix vector icon issue

--- a/index.html
+++ b/index.html
@@ -321,10 +321,10 @@
                 alt=""
               />
               <div class="fifth-img-details">
-                <img class="img1" src="./public/images/group.svg" alt="" />
+                <img class="img1" src="./public/images/common-group.svg" alt="" />
                 <p>Sarfraz Jasim</p>
                 <div></div>
-                <img class="img1" src="./public/images/calender.svg" alt="" />
+                <img class="img1" src="./public/images/common-calender.svg" alt="" />
                 <p>July 17, 2023</p>
               </div>
               <p class="fifth-title">
@@ -354,7 +354,7 @@
               </div>
               <div class="fifth-second-section-width">
                 <div class="fifth-second-section-time">
-                  <img class="img1" src="./public/images/calender.svg" alt="" />
+                  <img class="img1" src="./public/images/common-calender.svg" alt="" />
                   <p>July 17, 2023</p>
                 </div>
                 <p class="fifth-second-section-title">
@@ -383,7 +383,7 @@
               </div>
               <div class="fifth-second-section-width">
                 <div class="fifth-second-section-time">
-                  <img class="img1" src="./public/images/calender.svg" alt="" />
+                  <img class="img1" src="./public/images/common-calender.svg" alt="" />
                   <p>July 17, 2023</p>
                 </div>
                 <p class="fifth-second-section-title">
@@ -412,7 +412,7 @@
               </div>
               <div class="fifth-second-section-width">
                 <div class="fifth-second-section-time">
-                  <img class="img1" src="./public/images/calender.svg" alt="" />
+                  <img class="img1" src="./public/images/common-calender.svg" alt="" />
                   <p>July 17, 2023</p>
                 </div>
                 <p class="fifth-second-section-title">
@@ -443,10 +443,14 @@
             <p class="sixth-text1">LATEST FROM MY JOURNAL</p>
             <img class="sixth-img1" src="./public/images/sixth1.png" alt="" />
             <div class="fifth-img-details">
-              <img class="img1" src="./public/images/group.svg" alt="" />
+              <img class="img1" src="./public/images/common-group.svg" alt="" />
               <p>Sarfraz Jasim</p>
               <div></div>
-              <img class="img1" src="./public/images/calender.svg" alt="" />
+              <img
+                class="img1"
+                src="./public/images/common-calender.svg"
+                alt=""
+              />
               <p>July 17, 2023</p>
             </div>
             <p class="fifth-title sixth-w-change" id="sixth-title">
@@ -479,7 +483,7 @@
                   alt=""
                 />
                 <div class="fifth-img-details">
-                  <img class="img1" src="./public/images/calender.svg" alt="" />
+                  <img class="img1" src="./public/images/common-calender.svg" alt="" />
                   <p>July 17, 2023</p>
                 </div>
                 <p class="fifth-title sixth-w-change2" id="sixth-title2">
@@ -507,7 +511,7 @@
                   alt=""
                 />
                 <div class="fifth-img-details">
-                  <img class="img1" src="./public/images/calender.svg" alt="" />
+                  <img class="img1" src="./public/images/common-calender.svg" alt="" />
                   <p>July 17, 2023</p>
                 </div>
                 <p class="fifth-title sixth-w-change2" id="sixth-title2">
@@ -537,7 +541,7 @@
                   alt=""
                 />
                 <div class="fifth-img-details">
-                  <img class="img1" src="./public/images/calender.svg" alt="" />
+                  <img class="img1" src="./public/images/common-calender.svg" alt="" />
                   <p>July 17, 2023</p>
                 </div>
                 <p class="fifth-title sixth-w-change2" id="sixth-title2">
@@ -565,7 +569,7 @@
                   alt=""
                 />
                 <div class="fifth-img-details">
-                  <img class="img1" src="./public/images/calender.svg" alt="" />
+                  <img class="img1" src="./public/images/common-calender.svg" alt="" />
                   <p>July 17, 2023</p>
                 </div>
                 <p class="fifth-title sixth-w-change2" id="sixth-title2">
@@ -604,7 +608,7 @@
           <p class="sixth-text2">POPULAR POST</p>
           <img class="sixth-img3" src="./public/images/sixth6.png" alt="" />
           <div class="fifth-img-details">
-            <img class="img1" src="./public/images/calender.svg" alt="" />
+            <img class="img1" src="./public/images/common-calender.svg" alt="" />
             <p>July 17, 2023</p>
           </div>
           <p class="fifth-title sixth-w-change3" id="sixth-title3">
@@ -620,7 +624,7 @@
             <img class="sixth-img4" src="./public/images/sixth7.png" alt="" />
             <div>
               <div class="fifth-img-details">
-                <img class="img1" src="./public/images/calender.svg" alt="" />
+                <img class="img1" src="./public/images/common-calender.svg" alt="" />
                 <p>July 17, 2023</p>
               </div>
               <p class="fifth-title sixth-w-change4" id="sixth-title3">
@@ -634,7 +638,7 @@
             <img class="sixth-img4" src="./public/images/sixth8.png" alt="" />
             <div>
               <div class="fifth-img-details">
-                <img class="img1" src="./public/images/calender.svg" alt="" />
+                <img class="img1" src="./public/images/common-calender.svg" alt="" />
                 <p>July 17, 2023</p>
               </div>
               <p class="fifth-title sixth-w-change4" id="sixth-title3">
@@ -648,7 +652,7 @@
             <img class="sixth-img4" src="./public/images/sixth9.png" alt="" />
             <div>
               <div class="fifth-img-details">
-                <img class="img1" src="./public/images/calender.svg" alt="" />
+                <img class="img1" src="./public/images/common-calender.svg" alt="" />
                 <p>July 17, 2023</p>
               </div>
               <p class="fifth-title sixth-w-change4" id="sixth-title3">
@@ -662,7 +666,7 @@
             <img class="sixth-img4" src="./public/images/sixth10.png" alt="" />
             <div>
               <div class="fifth-img-details">
-                <img class="img1" src="./public/images/calender.svg" alt="" />
+                <img class="img1" src="./public/images/common-calender.svg" alt="" />
                 <p>July 17, 2023</p>
               </div>
               <p class="fifth-title sixth-w-change4" id="sixth-title3">
@@ -676,7 +680,7 @@
             <img class="sixth-img4" src="./public/images/sixth11.png" alt="" />
             <div>
               <div class="fifth-img-details">
-                <img class="img1" src="./public/images/calender.svg" alt="" />
+                <img class="img1" src="./public/images/common-calender.svg" alt="" />
                 <p>July 17, 2023</p>
               </div>
               <p class="fifth-title sixth-w-change4" id="sixth-title3">
